--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <meta name="slack-app-id" content="AHNMASS8M">
 <meta property="og:image" content="./src/images/logo.jpeg" />
 <link rel="shortcut icon" href="./src/images/logo.jpeg">
-<script>
+<!-- <script>
           var favicon = document.querySelector('link[rel="shortcut icon"]');
           window.isDarkMode = (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches);
           if(favicon && window.isDarkMode) {
               favicon.href = favicon.href.replaceAll('favicon-2021-light%402x.png', 'favicon-2021-dark%402x.png');
           }
-      </script><link rel="canonical" href="https://form.jotform.com/230702862347455" />
+      </script><link rel="canonical" href="https://form.jotform.com/230702862347455" /> -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1" />
 <meta name="HandheldFriendly" content="true" />
 <title>CSI Registration</title>
