--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link type="text/css" rel="stylesheet" href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.40079&themeRevisionID=5eb3b4ae85bd2e1e2966db96"/>
 <link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.40079" />
 <link type="text/css" rel="stylesheet" href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.40079" />
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="./css/style.css">
 
 <script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.40079" type="text/javascript"></script>
 <script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.40079" type="text/javascript"></script>
